--- a/symfony/templates/mark/_delete_mark_confirmation.html.twig
+++ b/symfony/templates/mark/_delete_mark_confirmation.html.twig
@@ -2,7 +2,7 @@
 <div class="modal fade" id="confirmationModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-body">
+            <div class="modal-body text-left">
                 <h4>{{ 'delete_mark_modal.title'|trans }}</h4>
                 <p>{{ 'delete_mark_modal.body'|trans }}</p>
             </div>
